# document-copilot

./: CLAUDE.md  README.md
backend/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e7320c767ec_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: me.py
backend/app/auth/: dependencies.py
backend/app/database/: models.py  supabase.py
docs/: architecture.md  todos.md
docs/guides/: supabase-setup.md
frontend/: CLAUDE.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/: RequireAuth.tsx
frontend/src/lib/: auth.tsx  env.ts
frontend/src/pages/: Home.tsx
frontend/src/pages/auth/: SignIn.tsx
