[project]
name = "document-copilot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.5",
    "fastapi==0.139.1",
    "pgvector==0.5.0",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.51",
    "structlog==26.1.0",
    "supabase==2.31.0",
    "uvicorn[standard]==0.51.0",
]

[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"
